--- a/lib/reg_user_web/templates/page/index.html.heex
+++ b/lib/reg_user_web/templates/page/index.html.heex
@@ -1,6 +1,6 @@
 <section class="phx-hero">
   
-  <a href="users"><h1><%= gettext "Clique %{name}!", name: "aqui para entrar" %></h1></a>
+  <a href="users"><h1><%= gettext "Click %{name}!", name: "here to enter" %></h1></a>
  
 </section>
 
