--- a/lib/reg_user_web/templates/user/form.html.heex
+++ b/lib/reg_user_web/templates/user/form.html.heex
@@ -5,7 +5,7 @@
     </div>
   <% end %>
 
-  <%= label f, :Nome %>
+  <%= label f, :Name %>
   <%= text_input f, :name %>
   <%= error_tag f, :name %>
 
@@ -13,11 +13,11 @@
   <%= text_input f, :email %>
   <%= error_tag f, :email %>
 
-  <%= label f, :Descrição %>
+  <%= label f, :Description %>
   <%= textarea f, :description %>
   <%= error_tag f, :description %>
 
   <div>
-    <%= submit "Salvar" %>
+    <%= submit "Save" %>
   </div>
 </.form>
