--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,15 @@
 @import "./phoenix.css";
 
 /* Alerts and form errors used by phx.new */
+
+.form-user {
+  width: 500px
+}
+
+.display-user {
+  width: 500px
+}
+
 .alert {
   padding: 15px;
   margin-bottom: 20px;
@@ -12,6 +21,9 @@
   color: #31708f;
   background-color: #d9edf7;
   border-color: #bce8f1;
+  left: -300px;
+  bottom: 40px;
+  position: relative;
 }
 .alert-warning {
   color: #8a6d3b;
