--- a/lib/reg_user_web/templates/layout/root.html.heex
+++ b/lib/reg_user_web/templates/layout/root.html.heex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="csrf-token" content={csrf_token_value()}>
-    <%= live_title_tag assigns[:page_title] || "RegUser", suffix: " · Phoenix Framework" %>
+    <%= live_title_tag assigns[:page_title] || "Reg User", suffix: " · Phoenix Framework" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
@@ -13,7 +13,7 @@
     <header>
       <section class="container">
        
-        <h2>Crud Com Phoenix Elixir</h2>
+        <h2>Crud App With Phoenix Elixir</h2>
        
       </section>
     </header>
