--- a/lib/reg_user_web/templates/user/new.html.heex
+++ b/lib/reg_user_web/templates/user/new.html.heex
@@ -1,9 +1,9 @@
-<div class="">
+<div class="form-user">
 
-        <h1>Novo Usuário</h1>
+        <h1>New User</h1>
 
         <%= render "form.html", Map.put(assigns, :action, Routes.user_path(@conn, :create)) %>
 
-        <span><%= link "Voltar", to: Routes.user_path(@conn, :index) %></span>
+        <span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
 
 </div>
