--- a/lib/reg_user_web/templates/user/show.html.heex
+++ b/lib/reg_user_web/templates/user/show.html.heex
@@ -1,27 +1,27 @@
-<div class="">
+<div class="display-user">
 
-      <h1>Exibir Usuário</h1>
+      <h1>Show User</h1>
 
       <ul>
 
         <li>
-          <strong>Nome:</strong>
+          <strong>Name:</strong>
           <%= @user.name %>
         </li>
 
         <li>
-          <strong>E-mail:</strong>
+          <strong>Email:</strong>
           <%= @user.email %>
         </li>
 
         <li>
-          <strong>Descrição:</strong>
+          <strong>Description:</strong>
           <%= @user.description %>
         </li>
 
       </ul>
 
-      <span><%= link "Editar", to: Routes.user_path(@conn, :edit, @user) %></span> |
-      <span><%= link "Voltar", to: Routes.user_path(@conn, :index) %></span>
+      <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span> |
+      <span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
 
 </div>
